BD-000: add code

--- a/src/main/resources/bone-local.properties
+++ b/src/main/resources/bone-local.properties
@@ -7,6 +7,7 @@ kerberos.user.principal=koala@DRDDATA.COM
 
 ##kafka producer config
 kafka.bootstrap.servers=192.168.230.151:9092,192.168.230.152:9092,192.168.230.153:9092
+file.name=D:\\tmp\\abc.txt
 
 
 ## redis server
